--- a/redeem-sphere/src/components/Footer.css
+++ b/redeem-sphere/src/components/Footer.css
@@ -1,5 +1,5 @@
 .footer {
-    background-color: #222831;
+    background-color: #0D1117;
     color: white;
     padding: 20px 0;
     width: 100vw;
