--- a/redeem-sphere/src/components/OffersPage.css
+++ b/redeem-sphere/src/components/OffersPage.css
@@ -1,5 +1,5 @@
 .offers-container {
-  background-color: #E3F2FD;
+  background-color: #393E46;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
