--- a/redeem-sphere/src/components/HelpPage.css
+++ b/redeem-sphere/src/components/HelpPage.css
@@ -1,7 +1,7 @@
 /* HelpPage.css */
 
 .help-container {
-  background-color: #f5f7fa;
+  background-color: #393E46;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
